# oiri

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/kimikage/oiri/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jnitest.cpp  log.h  ngspice.h  oiri.cpp
app/src/main/java/com/github/kimikage/oiri/: MainActivity.java
app/src/main/java/com/github/kimikage/oiri/svg/: AttrMap.java  Circle.java  Comment.java  ElementFactory.java  Group.java  Line.java  Matrix.java  NodeArrayList.java  Path.java  Point.java  Polyline.java  Rect.java  Shape.java  SimpleAttr.java  Style.java  StyleDeclaration.java  Svg.java  SvgColor.java  SvgDocument.java  SvgElement.java  SvgPaint.java  SvgParser.java  SvgStyle.java  Transform.java  Unknown.java  Value.java
app/src/main/java/com/github/kimikage/oiri/ui/: SvgView.java
app/src/main/java/org/w3c/dom/css/: CSSRule.java  CSSStyleDeclaration.java  CSSStyleRule.java  CSSValue.java
app/src/main/java/org/w3c/dom/svg/: SVGColor.java  SVGDocument.java  SVGElement.java  SVGMatrix.java  SVGPaint.java  SVGPoint.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
distribution/ngspice/include/: .gitignore
distribution/ngspice/lib/: .gitignore
gradle/wrapper/: gradle-wrapper.properties
liboiri/: build.gradle
liboiri/src/main/: AndroidManifest.xml
liboiri/src/main/cpp/: ngspice.cpp
liboiri/src/main/res/values/: strings.xml
(+12 files in other folders)
